# thrift-rpc-learning

thrift-kv/cpp/: CMakeLists.txt  client.cpp  gen_smoke.cpp  kv_handler.cpp  kv_handler.h  server.cpp
thrift-kv/if/: KeyValue.thrift
thrift-kv/if/gen-cpp2/: KeyValueStore.cpp  KeyValueStore.h  KeyValueStore.tcc  KeyValueStoreAsyncClient.cpp  KeyValueStoreAsyncClient.h  KeyValueStore_custom_protocol.h  KeyValueStore_processmap_binary.cpp  KeyValue_clients.h  KeyValue_constants.cpp  KeyValue_constants.h  KeyValue_data.cpp  KeyValue_data.h  KeyValue_for_each_field.h  KeyValue_handlers.h  KeyValue_metadata.cpp  KeyValue_metadata.h  KeyValue_types.cpp  KeyValue_types.h  KeyValue_types.tcc  KeyValue_types_binary.cpp  KeyValue_types_compact.cpp  KeyValue_types_custom_protocol.h  KeyValue_types_fwd.h  KeyValue_types_serialization.cpp  KeyValue_visit_by_thrift_field_metadata.h  KeyValue_visit_union.h  KeyValue_visitation.h
